--- a/src/component/css/login1.css
+++ b/src/component/css/login1.css
@@ -52,3 +52,18 @@ height: 80px;
 background: white;
 border-radius: 6px;
 }
+
+.input img{
+    margin: 0px 30px;
+}
+
+.input input{
+height: 50px;
+width: 400px;
+background-color: transparent;
+border: none;
+outline: none;
+color: #733635;
+font-size: 19px;
+
+}
